# chromo-map

./: .buildinfo  .pylintrc  CONTRAST_OPTIMIZATION_SUMMARY.md  README.md  about.html  catalog_matplotlib.html  catalog_palettable.html  catalog_plotly.html  catalog_visual.html  chromo_map_examples.ipynb  contrast_approaches_summary.py  final_test.py  find_viridis.py  genindex.html  index.html  mypy.ini  objects.inv  phase5_documentation.html  project-plan.md  pyproject.toml  requirements.txt  search.html  searchindex.js  sensitivity_test.py  setup.cfg  setup.py  test_catalog.py  test_final.py  test_get_gradient.py  test_gradient_swatch.py  test_hsv_contrast.py  test_individual.py  test_maximal_contrast.py  test_methods.py  test_phase2.py  test_phase2_simple.py  test_phase3_basic.py  test_phase3_comprehensive.py  test_phase3_simple.py  tox.ini
.doctrees/: about.doctree  environment.pickle  index.doctree
.doctrees/_color/: chromo_map.Color.doctree  chromo_map.ColorGradient.doctree  chromo_map.ColorMaps.doctree  color.doctree
.github/workflows/: ci.yml  improved-ci.yml  publish-pypi-pages.yml
_color/: chromo_map.Color.html  chromo_map.ColorGradient.html  chromo_map.ColorMaps.html  color.html
_modules/: index.html
_modules/chromo_map/: color.html
_modules/chromo_map/accessibility/: contrast.html
_modules/chromo_map/analysis/: palette.html
_modules/chromo_map/core/: color.html  gradient.html  swatch.html
_modules/chromo_map/utils/: color_utils.html
_sources/: about.rst.txt  catalog_matplotlib.rst.txt  catalog_palettable.rst.txt  catalog_plotly.rst.txt  catalog_visual.rst.txt  index.rst.txt  phase5_documentation.rst.txt
_sources/_color/: chromo_map.ColorGradient.rst.txt  chromo_map.ColorMaps.rst.txt  color.rst.txt
_sources/api/: accessibility.rst.txt  analysis.rst.txt  catalog.rst.txt  core.rst.txt
_sources/examples/: jupyter_integration.rst.txt
_sources/guides/: basic_usage.rst.txt  color_theory.rst.txt
_static/catalog_htmls/: matplotlib_by_type_diverging_visual.html  matplotlib_by_type_sequential_visual.html  palettable_by_type_diverging_visual.html  palettable_by_type_special_visual.html  plotly_by_type_miscellaneous_visual.html  plotly_by_type_sequential_visual.html
_static/coverage/: class_index.html  function_index.html  index.html  status.json  z_2694199cb12096c2___init___py.html  z_4aa4824a04f174fd___init___py.html
api/: accessibility.html  analysis.html  catalog.html  core.html  utilities.html
chromo_map/: __init__.py  color.py  color.py.backup  color_old.py
chromo_map/accessibility/: __init__.py  contrast.py
chromo_map/analysis/: __init__.py  palette.py
chromo_map/catalog/: __init__.py  builders.py  catalog.py
chromo_map/core/: __init__.py  color.py  gradient.py  swatch.py
chromo_map/utils/: __init__.py  color_utils.py
dev-scripts/: README.md  sensitivity_test.py
docs/: DOCUMENTATION_SUMMARY.md  INTEGRATION_VERIFICATION.md  MULTI_PAGE_CATALOG_SUMMARY.md  Makefile  VISUAL_CATALOG_INTEGRATION.md  VISUAL_SEPARATION_IMPROVEMENTS.md  generate_visual_catalog.py
docs/development/: DEVELOPMENT_PLAN.md  DOCUMENTATION_MODERNIZATION.md  MYPY_FIXES.md  PACKAGING_CONFIGURATION.md  PHASE5_COMPLETION.md  README.md  REFACTORING_PHASE1_SUMMARY.md  TEST_FIX_SUMMARY.md
docs/examples/: jupyter_integration_demo.ipynb
docs/source/: catalog_matplotlib.rst  catalog_palettable.rst  catalog_plotly.rst  conf.py  index.rst
docs/source/_color/: chromo_map.Color.rst  chromo_map.ColorMaps.rst  color.rst
docs/source/_static/: custom.css
docs/source/_static/catalog_htmls/: matplotlib_by_type_cyclic_visual.html  matplotlib_by_type_miscellaneous_visual.html  matplotlib_by_type_qualitative_visual.html  palettable_by_type_qualitative_visual.html  palettable_by_type_sequential_visual.html  plotly_by_type_cyclical_visual.html  plotly_by_type_diverging_visual.html  plotly_by_type_qualitative_visual.html
docs/source/_static/coverage/: class_index.html  function_index.html  index.html  z_2694199cb12096c2___init___py.html  z_2694199cb12096c2_color_py.html
docs/source/api/: utilities.rst
docs/source/examples/: gallery.rst  jupyter_integration_demo.ipynb
docs/source/guides/: accessibility.rst
examples/: README.md  contrast_approaches_summary.py  demo.py  gallery.html  jupyter_integration.html  jupyter_integration_demo.html  jupyter_integration_demo.ipynb  practical_example.py
guides/: accessibility.html  basic_usage.html  color_theory.html
scripts/: README.md  remove_duplicate_color.py
source/: catalog_visual.rst
source/_static/catalog_htmls/: matplotlib_by_type_cyclic_visual.html  matplotlib_by_type_diverging_visual.html  matplotlib_by_type_miscellaneous_visual.html  matplotlib_by_type_qualitative_visual.html  matplotlib_by_type_sequential_visual.html  palettable_by_type_diverging_visual.html  palettable_by_type_qualitative_visual.html  palettable_by_type_sequential_visual.html  palettable_by_type_special_visual.html  plotly_by_type_cyclical_visual.html  plotly_by_type_diverging_visual.html  plotly_by_type_miscellaneous_visual.html  plotly_by_type_qualitative_visual.html  plotly_by_type_sequential_visual.html
tests/: test_color.py  test_color_rich.py  test_color_utilities.py  test_get_gradient.py  test_gradient_utilities.py  test_swatch_utilities.py  test_utilities_integration.py
