[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chromo_map"
version = "1.0.0"  # Update this version number before you upload a new version to PyPI
description = "A Python package for manipulating color maps."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Sean Smith", email = "pirsquared.pirr@gmail.com" }
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy",
  "plotly",
  "matplotlib>=3.7.5",
  "pirrtools>=0.2.10",
  "palettable",
  "svgwrite",
  "ipython",
  "importlib_resources",
  "bs4",
  "jinja2",
  "rich",
]

[project.urls]
"Homepage" = "https://github.com/pirsquared/chromo-map"
"Documentation" = "https://pirsquared.github.io/chromo-map/"
"Bug Tracker" = "https://github.com/pirsquared/chromo-map/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "build",
  "twine",
  "black",
  "pre-commit",
  "pylint",
  "mypy",
  "ipykernel",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx-copybutton",
  "sphinx-autobuild",
  "sphinx-autodoc-typehints",
  "ipython",
  "coveralls",
  "graphviz",
  "sphinx-gallery",
  "palettable",
  "matplotlib",
  "plotly",
  "rich"
]

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | __pycache__
  | old
  | static
  | unmanaged
)/
'''

[tool.setuptools]
# Ensure include_package_data is true
include-package-data = true

[tool.setuptools.package-data]
# Specify the data files
chromo_map = ["data/*.json"]

