[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chromo_map"
version = "1.0.0"
description = "A Python package for manipulating color maps."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Sean Smith", email = "pirsquared.pirr@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
    "plotly>=5.0.0",
    "matplotlib>=3.7.5",
    "pirrtools>=0.2.10",
    "palettable>=3.3.0",
    "svgwrite>=1.4.0",
    "ipython>=7.0.0",
    "importlib_resources>=5.0.0",
    "beautifulsoup4>=4.9.0",
    "jinja2>=3.0.0",
    "rich>=10.0.0",
]

[project.urls]
"Homepage" = "https://github.com/pirsquared/chromo-map"
"Documentation" = "https://pirsquared.github.io/chromo-map/"
"Bug Tracker" = "https://github.com/pirsquared/chromo-map/issues"
"Source Code" = "https://github.com/pirsquared/chromo-map"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "build>=0.8.0",
    "twine>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "flake8-pyproject>=1.2.0",
    "pre-commit>=2.20.0",
    "pylint>=2.15.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "ipykernel>=6.0.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-autodoc-typehints>=1.19.0",
    "coveralls>=3.3.0",
    "graphviz>=0.20.0",
    "sphinx-gallery>=0.11.0",
    "tox>=4.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-autodoc-typehints>=1.19.0",
    "sphinx-gallery>=0.11.0",
    "nbsphinx>=0.8.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["chromo_map*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
chromo_map = ["data/*.json"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | __pycache__
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=chromo_map",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--strict-markers",
    "--strict-config",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.coverage.run]
source = ["chromo_map"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.flake8]
max-line-length = 88
ignore = ["E501", "W291", "W293", "E741", "E722", "W503", "F401", "F841"]
extend-exclude = ["docs/", "dev-scripts/", "examples/", "scripts/"]